added the first blog

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple Website
-        
-    </title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Simple Website</title>
+
+    <link rel="stylesheet" href="styles/blog.css">
+  </head>
+  <body>
+    <div>
+      <h3>My First Website</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aliquid
+        suscipit consequuntur illo assumenda atque tenetur reiciendis magni
+        nesciunt, ullam dolorem exercitationem iusto nostrum repudiandae
+        officiis consequatur incidunt adipisci eius?
+      </p>
+    </div>
+  </body>
 </html>
