--- a/index.html
+++ b/index.html
@@ -35,5 +35,14 @@
         officiis consequatur incidunt adipisci eius?
       </p>
     </div>
+
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"give a meaningful commit message</li>
+            <li>git push</li>
+        </ul>
+    </div>
   </body>
 </html>
