--- a/index.html
+++ b/index.html
@@ -44,5 +44,9 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h3>Add a Photo </h3>
+        <img src="images/photo.jpg" alt="Photo">
+    </div>
   </body>
 </html>
